--- a/src/components/Country/country.css
+++ b/src/components/Country/country.css
@@ -4,3 +4,8 @@
     margin: 15px;
     border-radius: 15px;
 }
+.country-img{
+    height: 200px;
+    width: 100%;
+    /* object-fit: cover; */
+}
