--- a/src/components/Country/country.css
+++ b/src/components/Country/country.css
@@ -1,11 +1,9 @@
 .country{
     border: 2px solid magenta;
-    padding: 15px;
-    margin: 15px;
+    padding: 10px;
+    margin: 10px;
     border-radius: 15px;
 }
-.country-img{
-    height: 200px;
-    width: 100%;
-    /* object-fit: cover; */
+.visited{
+    background-color:aquamarine;
 }
